# tensors-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.zed/: debug.json  settings.json
src/: device.hpp  linalg.cpp  linalg.hpp  main.cpp  pch.hpp  tensor.cpp  tensor.hpp  tensor_data.cpp  tensor_data.hpp
src/autograd/: grad_node.cpp  grad_node.hpp
src/backend/cpu/: linalg.cpp
src/backend/cuda/: cuda_backend.cuh  linalg.cu
src/modules/: linear.cpp  linear.hpp  module.hpp
src/optimizer/: optimizer.hpp  sgd.cpp  sgd.hpp
